<resources>

    <string name="app_name">Github User App</string>
    <string name="title_activity_splash_screen">Github User App</string>
    <string name="title_activity_preferences">Preferences</string>

    <string name="cd_github_logo">Github Logo</string>
    <string name="cd_user_avatar">User avatar</string>
    <string name="cd_icon_repository">Repository icon</string>
    <string name="cd_icon_follower">Follower icon</string>
    <string name="cd_icon_company">Company icon</string>
    <string name="cd_icon_location">Location icon</string>
    <string name="cd_icon_error">Error icon</string>

    <string name="title_splash_screen">Github User App</string>
    <string name="title_user_list">Users List</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_add_favorite">Add to favorites</string>
    <string name="title_preferences">Preferences</string>

    <string name="menu_search">Search</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_preferences">Preferences</string>

    <string name="text_credit">Created by Marcellino Chris O\'Vara</string>

    <string name="format_company">Member of %1$s</string>
    <plurals name="format_repository">
        <item quantity="one">%1$d repository</item>
        <item quantity="other">%1$d repositories</item>
    </plurals>
    <string name="format_follow">%1$s | %2$s</string>
    <plurals name="format_follower">
        <item quantity="one">%1$d follower</item>
        <item quantity="other">%1$d followers</item>
    </plurals>
    <plurals name="format_title_follower">
        <item quantity="one">Follower</item>
        <item quantity="other">Followers</item>
    </plurals>
    <plurals name="format_following">
        <item quantity="one">%1$d following</item>
        <item quantity="other">%1$d followings</item>
    </plurals>
    <string name="format_title_following">Following</string>
    <string name="format_page">Page %1$d of %2$d</string>
    <string name="format_search_query">\'%1$s\':</string>
    <plurals name="format_search_count">
        <item quantity="one">%1$d user found</item>
        <item quantity="other">%1$d users found</item>
    </plurals>
    <plurals name="format_favorites_count">
        <item quantity="one">%1$d favorite</item>
        <item quantity="other">%1$d favorites</item>
    </plurals>

    <string name="error_loading_list">Error while loading list!</string>
    <string name="error_try_again">Try again</string>

    <string name="btn_list_to_top">Return to top</string>

    <string name="hint_enter_username">Enter Username</string>

    <string name="ph_user_name">JakeWharton</string>
    <string name="ph_name">Jake Wharton</string>
    <string name="ph_repository">102 repositories</string>
    <string name="ph_follow">56995 followers | 12 following</string>
    <string name="ph_company">Member of Google, Inc.</string>
    <string name="ph_location">Pittsburgh, PA, USA</string>
    <string name="ph_page">Page 1 of 100.000</string>
    <string name="ph_search_query">\'test\':</string>
    <string name="ph_search_count">500 users found</string>
    <string name="ph_favorites_count">10 favorites</string>

    <string name="dialog_exit_title">Thank You!</string>
    <string name="dialog_exit_description">Do rate 5 stars ;D</string>
    <string name="dialog_exit_positive">Sure!</string>
    <string name="dialog_exit_negative">Nope</string>

    <string name="preference_category_notifications">Notifications</string>
    <string name="preference_notifications_title">Enable notifications</string>
    <string name="preference_notifications_time_title">Pick reminder time</string>
    <string name="preference_notifications_time_summary">Reminder at %1$s</string>
    <string name="preference_notifications_time_default" translatable="false">09:00</string>
    <string name="preference_category_language">Language</string>
    <string name="preference_language_title">Set language</string>
    <string name="preference_language_summary" translatable="false">English</string>

    <string-array name="language_list">
        <item>English</item>
        <item>Bahasa Indonesia</item>
    </string-array>

    <string name="notification_reminder_title">GithubUserApp reminder</string>
    <string name="notification_reminder_content">Check out Github\'s most popular users!</string>

    <string name="widget_empty_view">No Data Available</string>

</resources>
