<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_widget"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorAccent"
    android:orientation="horizontal"
    android:padding="8dp">

    <ImageView
        android:id="@+id/iv_widget_avatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/cd_user_avatar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_widget_username"
            style="@style/AppTheme.Text.Medium"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ellipsize="end"
            android:maxLines="1"
            android:textStyle="bold"
            tools:text="@string/ph_user_name" />

        <TextView
            android:id="@+id/tv_widget_name"
            style="@style/AppTheme.Text.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            tools:text="@string/ph_name" />

        <TextView
            android:id="@+id/tv_widget_company"
            style="@style/AppTheme.Text.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            app:drawableStartCompat="@drawable/ic_company"
            tools:text="@string/ph_company" />

        <TextView
            android:id="@+id/tv_widget_location"
            style="@style/AppTheme.Text.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            app:drawableStartCompat="@drawable/ic_location"
            tools:text="@string/ph_location" />
    </LinearLayout>
</LinearLayout>