<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp">

    <ImageView
        android:id="@+id/iv_item_avatar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/cd_user_avatar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/user1" />

    <TextView
        android:id="@+id/tv_item_name"
        style="@style/AppTheme.Text.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/iv_item_avatar"
        app:layout_constraintTop_toTopOf="@id/iv_item_avatar"
        tools:text="@string/ph_name" />

    <TextView
        android:id="@+id/tv_item_user_name"
        style="@style/AppTheme.Text.Medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constraintEnd_toStartOf="@id/btn_item_add_favorite"
        app:layout_constraintStart_toEndOf="@id/tv_item_name"
        app:layout_constraintTop_toTopOf="@id/tv_item_name"
        tools:text="@string/ph_user_name" />

    <ImageView
        android:id="@+id/iv_item_company"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="6dp"
        android:contentDescription="@string/cd_icon_company"
        android:src="@drawable/ic_company"
        app:layout_constraintStart_toStartOf="@id/tv_item_name"
        app:layout_constraintTop_toBottomOf="@id/tv_item_name" />

    <TextView
        android:id="@+id/tv_item_company"
        style="@style/AppTheme.Text.Small"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constraintBottom_toBottomOf="@id/iv_item_company"
        app:layout_constraintEnd_toStartOf="@id/btn_item_add_favorite"
        app:layout_constraintStart_toEndOf="@id/iv_item_company"
        app:layout_constraintTop_toTopOf="@id/iv_item_company"
        tools:text="@string/ph_company" />

    <ImageView
        android:id="@+id/iv_item_location"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/cd_icon_location"
        android:src="@drawable/ic_location"
        app:layout_constraintStart_toStartOf="@id/tv_item_name"
        app:layout_constraintTop_toBottomOf="@id/iv_item_company" />

    <TextView
        android:id="@+id/tv_item_location"
        style="@style/AppTheme.Text.Small"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constraintBottom_toBottomOf="@id/iv_item_location"
        app:layout_constraintEnd_toStartOf="@id/btn_item_add_favorite"
        app:layout_constraintStart_toEndOf="@id/iv_item_location"
        app:layout_constraintTop_toTopOf="@id/iv_item_location"
        tools:text="@string/ph_location" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_item_add_favorite"
        style="@style/AppTheme.ButtonIcon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        app:icon="@drawable/ic_favorite"
        app:iconTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>