<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".UserDetailActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/container_avatar"
            app:layout_constraintTop_toBottomOf="@+id/container_avatar">

            <View
                android:id="@+id/container_avatar"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_avatar"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="100dp"
                android:contentDescription="@string/cd_user_avatar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/user1" />

            <TextView
                android:id="@+id/tv_name"
                style="@style/AppTheme.Text.ExtraLarge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_avatar"
                tools:text="@string/ph_name" />

            <TextView
                android:id="@+id/tv_user_name"
                style="@style/AppTheme.Text.Large"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_name"
                tools:text="@string/ph_user_name" />

            <ImageView
                android:id="@+id/iv_repository_icon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/cd_icon_repository"
                android:src="@drawable/ic_repo"
                app:layout_constraintEnd_toStartOf="@+id/tv_repository"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_user_name" />

            <TextView
                android:id="@+id/tv_repository"
                style="@style/AppTheme.Text.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/iv_repository_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/iv_repository_icon"
                app:layout_constraintTop_toTopOf="@id/iv_repository_icon"
                tools:text="@string/format_repository" />

            <ImageView
                android:id="@+id/iv_follower_icon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/cd_icon_follower"
                android:src="@drawable/ic_follower"
                app:layout_constraintEnd_toStartOf="@+id/tv_follower"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_repository_icon" />

            <TextView
                android:id="@+id/tv_follower"
                style="@style/AppTheme.Text.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                app:layout_constraintBottom_toBottomOf="@id/iv_follower_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/iv_follower_icon"
                app:layout_constraintTop_toTopOf="@id/iv_follower_icon"
                tools:text="@string/format_follower" />

            <View
                android:id="@+id/divider_company"
                style="@style/AppTheme.Divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@id/iv_follower_icon" />

            <ImageView
                android:id="@+id/iv_company_icon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/cd_icon_company"
                android:src="@drawable/ic_company"
                app:layout_constraintEnd_toStartOf="@+id/tv_company"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider_company" />

            <TextView
                android:id="@+id/tv_company"
                style="@style/AppTheme.Text.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:gravity="center"
                android:maxWidth="300dp"
                app:layout_constraintBottom_toBottomOf="@id/iv_company_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/iv_company_icon"
                app:layout_constraintTop_toTopOf="@id/iv_company_icon"
                tools:text="@string/format_company" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="iv_company_icon, tv_company" />

            <ImageView
                android:id="@+id/iv_location_icon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/cd_icon_location"
                android:src="@drawable/ic_location"
                app:layout_constraintEnd_toStartOf="@+id/tv_location"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/barrier_company" />

            <TextView
                android:id="@+id/tv_location"
                style="@style/AppTheme.Text.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/iv_location_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/iv_location_icon"
                app:layout_constraintTop_toTopOf="@id/iv_location_icon"
                tools:text="@string/ph_location" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/appbar_user_detail"
            style="@style/AppTheme.AppBar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            app:navigationIcon="@drawable/ic_back"
            app:title="@string/title_user_detail" />
    </com.google.android.material.appbar.AppBarLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>